# orbis-crm

./: .gitignore  ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-00790af33f32e566a5e1c1d48c1244dc6c4f84ef1194ecd154f92829ac71bf74.json  query-00cfa3e9074b21e10dd588a9d31e6ca670490a59a6129589731f537da141f067.json  query-039a61c498be53bfff34b7ed1b5c9a8ce762ed566e37ac6f4d4ead88d6d8364e.json  query-044c02736f2294a625ba32520163a776f99ac3f1042a8a1288568051a6a3cf97.json  query-05770773fd9944809df9e92c9af0d7b890532b13dca656b9bef3ed2b8a4090b8.json  query-06e589e41d68ecc48081d72854f7c3525ab1c7ca2b2682b3920904b22e7ba7be.json  query-074d3e2666204b48053244a8ccbc092bdbdb9843da906d19790ab63aeee1ae44.json  query-07aa83e4b14af88ff3e0e687aa9a9296970919b2841b2f0254c62692e801be2b.json  query-09a128e5686238b99d533cd07f73b5c54da64cf1e723cbe5e1f8aa71dc103d2e.json  query-0ac2c8438deaf4b5c1f6daff288f855fba3d5f082dd4904af50c102f7948811b.json  query-0b7f39dc43d6d94093dd0b66a5b9f732ccaddde80ca75558a7855b39757065d0.json  query-0e53dbe10769087c9ddba09807aee8313a2aac9c4a004955632036aa7a661532.json  query-11867ba21012fc90d702bda4c2a9e5a5da19007be4c758545857ae54453d4c8b.json  query-11be0ac0e2b060ad10dc3a83ef6b0ba72602f898d919c73d65c2aa9d010a30c8.json  query-128c2083b06c8f37550e378409da67f2b1b90c06987aa39a536feeb0369fc100.json  query-12cd0dcaf0102b226726240e97101116b4229aa95cd3f6d54e9b0e7bb604cc55.json  query-1a5fa2a957dcb3a4e025aed9e82f4b73f8c5f6e9767c91e1a254b8a6c00b938c.json  query-1bc8443c991e299e9e64f3ca42212e64d45db46f7763d226482d9f06f1a48c73.json  query-1efd229aa6156e68e3752959f59ee2d54907fc8129ba84b4e5330bfcdb3f884c.json  query-1f5c0e3053bdc23113fe46e1cdf4430435b9ba7bde81066a6b42e5a5b7cf18d4.json  query-20dff3c0c8603580e860d9ce84518e54e752fbce92df09927a15efbe5ac3dd7c.json  query-278577835fd790536f1e26ff45936388c329d4b5d8418f7a82b41365b2a87b2a.json  query-2a7f4d461bd131f094d6bf7eb2455b07894fbf4ccb1a17b91d55282944fe333a.json  query-2c240c9c6ad1ac6912e4879521a6a7c77e3b6cd74cd79522850d4d801ca9cc04.json  query-2e7ee817b43950492f8739f989349aa1226e3dd75358c3453b9bd96095647da4.json  query-30094638f54490bbe591ed96bb9d3eeb34cfe7c9638b7435ae9c27c2c6de9c08.json  query-3046cc541e8c1966e65498da13913a1dc746f3fa4fc85d0ba8584c49d350f95d.json  (+92 more)
(+97 files in other folders)
